# jobtracker

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: company_boards.yaml  search.yaml
job_agent/: __init__.py  cli.py  config.py  gui.py  ranking.py  reporting.py  resume.py  runner.py  sources.py  state.py  web.py
job_agent/templates/: index.html
templates/: index.html
